--- a/pong/index.html
+++ b/pong/index.html
@@ -48,4 +48,17 @@
         <div id="paddle-right" class="paddle"></div>
     </div>
 </body>
+<script>
+    let screen = document.getElementById("screen");
+    let leftPaddle = document.getElementById("left-paddle");
+    let rightPaddle = document.getElementById("right-paddle");
+
+    document.onkeydown = ((a,b,c) => {
+        console.log(a);
+        console.log(b);
+        console.log(c);
+
+    });
+
+</script>
 </html>
